# tic-tac-toe

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
documentation/: implementation_document.md  project_specification.md  testing.md  user_guide.md
documentation/weekly_reports/: report_week1.md  report_week2.md  report_week3.md  report_week4.md  report_week5.md  report_week6.md
src/: ai.py  board.py  game.py  grid.py  index.py  moves_list.py
src/services/: board.py  evaluate.py  minimax.py
src/tests/: ai_test.py  board_test.py  grid_test.py
