[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["liinu-a <liinu.arola@helsinki.fi>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.10"
pylint = "^3.3.4"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
